adicionar html de cadastro de graduacoes - BASIS-221273

--- a/frontend/src/app/seguranca/components/servidores/servidores.component.html
+++ b/frontend/src/app/seguranca/components/servidores/servidores.component.html
@@ -65,7 +65,7 @@
     </div>
     <div class="p-grid p-jc-end">
         <div class="button-margin">
-            <button pButton type="button" label="Novo Servidor" icon="ui-icon-add" routerLink="/seguranca/formulario"
+            <button pButton type="button" label="Novo Servidor" icon="ui-icon-add" routerLink="/seguranca/formulario-servidor"
                 bTooltip="Cadastrar novo Servidor."></button>
         </div>
     
