Resolver conflitos com a master - BASIS-221543
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/frontend/src/app/exames/components/exames-form/exames-form.component.html
+++ b/frontend/src/app/exames/components/exames-form/exames-form.component.html
@@ -9,7 +9,8 @@
             <p-tabPanel header="Materiais de Análise">
                 <app-cadastrar-material></app-cadastrar-material>
             </p-tabPanel>
+            <p-tabPanel header="Materiais de Análise de Exame">
+                <app-material-exames></app-material-exames>
+            </p-tabPanel>
         </p-tabView>
     </div>
-
-
