--- a/frontend/src/app/exames/components/listar-grade-de-exame/listar-grade-de-exame.component.html
+++ b/frontend/src/app/exames/components/listar-grade-de-exame/listar-grade-de-exame.component.html
@@ -87,13 +87,13 @@
                         label="Nova grade"Primeiro Exame
                     ></button>
                 </div>
-                    <basis-datatable [verticalButtons]="false" #datatable
+                    <basis-datatable [url]="searchUrl" [verticalButtons]="false" #datatable
                         type="memory" [value]="gradeAgendamento" sortField="brand">
                         <p-column header="Grade" field="id"></p-column>
                         <p-column header="Unid. Executora" field="unidadeExecutoraId"></p-column>
-                        <p-column header="Sala" field="salaGradeId"></p-column>  
+                        <p-column header="Sala" field="salaGradeIdentificacaoDaSala"></p-column>  
                         <p-column header="Grupo" field="grupoAgendamentoExameId"> </p-column>  
-                        <p-column header="Exame" field="exameGradeId"> </p-column>  
+                        <p-column header="Exame" field="exameGradeNome"> </p-column>  
                         <p-column header="Responsável" field="responsavelId"> </p-column>  
                         <p-column header="Situação" field="ativo">
                             <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
