--- a/frontend/src/app/seguranca/components/servidores/formulario-graduacoes/formulario-graduacoes.component.html
+++ b/frontend/src/app/seguranca/components/servidores/formulario-graduacoes/formulario-graduacoes.component.html
@@ -1,4 +1,3 @@
-
 <form #form [formGroup]="formGraduacao" (ngSubmit)="submit()">
     <div class="card">
         <div class="p-md-12">
@@ -6,25 +5,27 @@
             <div class="p-col-12 p-grid">
                 <div class="p-col-3">
                     <span class="p-float-label">
-                        <input type="text" pInputText disabled name="vinculo" />
-                        <label>Vínculo</label>
-                    </span>
-                </div>
-                <div class="p-col-3">
-                    <span class="p-float-label">
-                        <input type="text" pInputText disabled name="matricula" />
+                        <p-autoComplete field="matricula" [suggestions]="listaServidor"
+                            (completeMethod)="buscaServidor($event)" [dropdown]="true" formControlName="servidor">
+                        </p-autoComplete>
                         <label>Matrícula</label>
                     </span>
                 </div>
                 <div class="p-col-3">
                     <span class="p-float-label">
-                        <input type="text" pInputText disabled name="nome" />
+                        <input type="text" pInputText disabled formControlName="vinculo" />
+                        <label>Vínculo</label>
+                    </span>
+                </div>
+                <div class="p-col-3">
+                    <span class="p-float-label">
+                        <input type="text" pInputText disabled formControlName="nome" />
                         <label>Nome</label>
                     </span>
                 </div>
                 <div class="p-col-3">
                     <span class="p-float-label">
-                        <input type="text" pInputText disabled name="pessoa" />
+                        <input type="text" pInputText disabled formControlName="pessoa" />
                         <label>Pessoa</label>
                     </span>
                 </div>
@@ -37,10 +38,6 @@
                         </p-autoComplete>
                         <label>Curso</label>
                     </span>
-                    <!-- <p-message severity="error" text="Curso obrigatório" *ngIf="
-                        formServidor.controls['curso'].errors?.required &&
-                        formServidor.controls['curso'].touched">
-                    </p-message> -->
                 </div>
                 <div class="p-md-6 p-lg-3">
                     <span class="p-float-label">
@@ -49,10 +46,6 @@
                         </p-autoComplete>
                         <label>Instituição</label>
                     </span>
-                    <!-- <p-message severity="error" text="Instituição de graduação obrigatória" *ngIf="
-                        formServidor.controls['instituicao'].errors?.required &&
-                        formServidor.controls['instituicao'].touched">
-                    </p-message> -->
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
@@ -65,18 +58,14 @@
             <div class="p-col-12 p-grid">
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
-                        <p-calendar view="month" dateFormat="mm/yy" [yearNavigator]="true" yearRange="2000:2050"
+                        <p-calendar view="month" dateFormat="mm/yy" [yearNavigator]="true" yearRange="2000:2100"
                             [showIcon]="true" inputId="icon" formControlName="anoInicio"></p-calendar>
                         <label>Ano início</label>
                     </span>
-                    <!-- <p-message severity="error" text="Início do Vínculo obrigatório" *ngIf="
-                            formServidor.controls['inicioDoVinculo'].errors?.required &&
-                            formServidor.controls['inicioDoVinculo'].touched">
-                </p-message> -->
                 </div>
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
-                        <p-calendar view="month" dateFormat="mm/yy" [yearNavigator]="true" yearRange="2000:2050"
+                        <p-calendar view="month" dateFormat="mm/yy" [yearNavigator]="true" yearRange="2000:2100"
                             [showIcon]="true" inputId="icon" formControlName="anoFim"></p-calendar>
                         <label>Ano Fim</label>
                     </span>
@@ -96,8 +85,7 @@
             </div>
         </div>
         <div class="p-grid p-jc-end">
-            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro"
-                [disabled]="!valid()"></button>
+            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro" [disabled]="!valid()"></button>
         </div>
     </div>
 </form>
