Adicionar campo de nome do grupo - BASIS-214044

--- a/frontend/src/app/exames/components/listar-grade-de-exame/listar-grade-de-exame.component.html
+++ b/frontend/src/app/exames/components/listar-grade-de-exame/listar-grade-de-exame.component.html
@@ -92,7 +92,7 @@
                         <p-column header="Grade" field="id"></p-column>
                         <p-column header="Unid. Executora" field="unidadeExecutoraId"></p-column>
                         <p-column header="Sala" field="salaGradeIdentificacaoDaSala"></p-column>  
-                        <p-column header="Grupo" field="grupoAgendamentoExameId"> </p-column>  
+                        <p-column header="Grupo" field="grupoGradeNome"> </p-column>  
                         <p-column header="Exame" field="exameGradeNome"> </p-column>  
                         <p-column header="Responsável" field="responsavelId"> </p-column>  
                         <p-column header="Situação" field="ativo">
